--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "contrib/uberpt"]
 	path = contrib/uberpt
-	url = git@github.com:bucko909/uberpt.git
+	url = https://github.com/bucko909/uberpt.git
